[workspace]
resolver = "3"
members = [
    "crate/solana-stream-sdk",
    "crate/r2-uploader",
    "client/shreds-rs",
    "client/geyser-rs", 
]
exclude = [
    "package/solana-entry-decoder"
]

[workspace.package]
version = "0.3.0"
description = ""
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

[workspace.dependencies]
anyhow = "1.0.62"
arc-swap = "1.6"
backoff = "0.4.0"
bincode = "1.3.3"
borsh = "1.5.3"
bs58 = "0.5.1"
chrono = "0.4.26"
clap = { version = "4.3.0", features = ["derive", "env"] }
crossbeam-channel = "0.5.8"
dashmap = "5"
dotenv = "0.15"
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
hostname = "0.4.0"
itertools = "0.13.0"
indicatif = "0.17.9"
log = "0.4"
prost = "0.13.1"
prost-types = "0.13.3"
protobuf-src = "1"
rand = "0.8"
reqwest = { version = "0.12.15" }
serde_json = "1"
serde = "1"
signal-hook = "0.3"
solana-client = "=2.2.1"
solana-hash = "=2.2.1"
solana-metrics = "=2.2.1"
solana-net-utils = "=2.2.1"
solana-perf = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-signature = "=2.2.1"
solana-sdk = "=2.2.1"
solana-streamer = "=2.2.1"
solana-stream-sdk = { path = "crate/solana-stream-sdk" }
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "eric/v2.2-merkle-recovery", package = "solana-ledger" }
solana-entry = "=2.2.1"
solana-account-decoder = "=2.2.1"
solana-transaction-context = "=2.2.1"
solana-transaction-error = "=2.2.1"
solana-transaction-status = "=2.2.1"
thiserror = "1"
tokio = { version = "1.21.2" }
tonic = { version = "0.12.1" }
tonic-build = "0.10"
maplit = "1.0.2"
dotenvy = "0.15"
yellowstone-grpc-client = "6.1.0"
yellowstone-grpc-proto = "6.1.0"
