[workspace]
resolver = "3"
members = [
    "crate/solana-stream-sdk",
    "crate/r2-uploader",
    "client/shreds-rs",
    "client/geyser-rs",
]
exclude = [
    "package/solana-shreds-client",
    "package/solana-entry-decoder",
    "temp-release/shreds-rs",
    "temp-release/geyser-rs"
]

[workspace.package]
version = "0.6.1"
description = ""
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"

[profile.release]
# thin has minimal overhead vs none (default): https://blog.llvm.org/2016/06/thinlto-scalable-and-incremental-lto.html
lto = "thin"

[workspace.dependencies]
anyhow = "1.0.98"
arc-swap = "1.7"
backoff = "0.4.0"
bincode = "1.3.3"
borsh = "1.5.3"
bs58 = "0.5.1"
chrono = "0.4.38"
clap = { version = "4.5.23", features = ["derive", "env"] }
crossbeam-channel = "0.5.13"
dashmap = "6"
dotenv = "0.15"
dotenvy = "0.15"
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
hostname = "0.4.0"
http = "0.2"
itertools = "0.13.0"
json5 = "0.4.1"
log = "0.4"
maplit = "1.0.2"
prost = "0.14.1"
prost-types = "0.14.1"
protobuf-src = "1.1.0"
rand = "0.8"
reqwest = { version = "0.12.15" }
serde_json = "1"
serde_jsonc = "1"
serde = "1"
signal-hook = "0.3"
solana-client = "3.0"
solana-rpc-client = "3.0"
solana-hash = "3.0"
solana-metrics = "3.0"
solana-net-utils = "3.0"
solana-perf = "3.0"
solana-pubkey = "3.0"
solana-signature = "3.0"
solana-sdk = "3.0"
solana-streamer = "3.0"
solana-stream-sdk = { path = "crate/solana-stream-sdk" }
solana-ledger = { git = "https://github.com/jito-foundation/jito-solana.git", branch = "lb/v3.0.12-jito", package = "solana-ledger" }
solana-entry = "3.0"
solana-account-decoder = "3.0"
solana-transaction-context = "3.0"
solana-transaction-error = "3.0"
solana-transaction-status = "3.0"
thiserror = "1"
tokio = { version = "1.41.1" }
tonic = { version = "0.14.2" }
tonic-build = "0.14.2"
tonic-prost = "0.14.2"
tonic-prost-build = "0.14.2"
url = "2.5.4"
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"

[patch.crates-io]
# base64ct 1.8.x uses edition 2024; keep pinned to 1.7.x via git tag until we validate with the Rust 1.86 toolchain.
base64ct = { git = "https://github.com/RustCrypto/formats.git", tag = "base64ct/v1.7.3" }
