[package]
name = "geyser-rs"
version = { workspace = true }
description = "Rust client for Solana Geyser streaming"
authors = { workspace = true }
homepage = { workspace = true }
edition = { workspace = true }
publish = false

[[bin]]
name = "geyser-rs"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
backoff = { workspace = true, features = ["tokio"] }
dotenv = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
json5 = { workspace = true }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_jsonc = { workspace = true }
solana-stream-sdk = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
url = { workspace = true }