[package]
name = "solana-stream-sdk"
version = { workspace = true }
description = "Rust SDK for Solana streaming data"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ValidatorsDAO/solana-stream"
keywords = ["solana", "blockchain", "streaming", "grpc", "shreds"]
categories = ["api-bindings", "network-programming"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tonic = { workspace = true, features = ["tls", "tls-roots", "tls-webpki-roots"] }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

