[package]
name = "solana-stream-sdk"
version = "1.2.0"
description = "Rust SDK for Solana streaming data"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ValidatorsDAO/solana-stream"
keywords = ["solana", "blockchain", "streaming", "grpc", "shreds"]
categories = ["api-bindings", "network-programming"]

[dependencies]
futures = { workspace = true }
http = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tonic = { workspace = true, features = ["tls-native-roots", "tls-webpki-roots"] }
tonic-prost = { workspace = true }
thiserror = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_jsonc = { workspace = true }
serde = { workspace = true, features = ["derive"] }
solana-packet = { workspace = true }
toml = "0.8"
url = { workspace = true }
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true, features = ["plugin"] }
bincode = { workspace = true }
solana-entry = { workspace = true }
solana-ledger = { workspace = true, features = ["agave-unstable-api"] }
solana-sdk = { workspace = true }
solana-vote-program = { workspace = true }
solana-rpc-client = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }


[build-dependencies]
protobuf-src = { workspace = true }
tonic-prost-build = { workspace = true }
