[package]
name = "solana-entry-decoder"
version.workspace = true
description.workspace = true
authors.workspace = true
homepage.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
solana-entry = {version = "=2.2.1"}
bincode = "1.3"             
napi = { version = "2.15.0", default-features = false, features = ["napi4", "serde-json"] }
napi-derive = "2.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"