[package]
name = "solana-shreds-client"
version = "1.2.0"
description = "Solana Shreds Client for Scale."
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.15.0", default-features = false, features = ["napi4", "serde-json", "tokio_rt", "async"] }
napi-derive = "2.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
solana-stream-sdk = "1.2.0"
futures = "0.3"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
