[package]
name = "geyser-rs-temp-release"
version = "0.5.1"
description = "Rust client for Solana Geyser streaming"
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/elsoul/solana-stream"
publish = false

[[bin]]
name = "geyser-rs-temp-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.62"
bs58 = "0.5.1"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.26"
dotenv = "0.15"
env_logger = "0.11.3"
futures = "0.3.24"
hex = "0.4.3"
json5 = "0.4.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jsonc = "1"
solana-stream-sdk = "0.5.1"
solana-sdk = "=2.2.1"
solana-transaction-status = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-signature = "=2.2.1"
solana-hash = "=2.2.1"
thiserror = "1"
tokio = { version = "1.21.2" }
tonic = { version = "0.12.1" }
url = "2.5.4"