[package]
name = "geyser-rs-temp-release"
version = "1.2.0"
description = "Rust client for Solana Geyser streaming"
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/elsoul/solana-stream"
publish = false

[[bin]]
name = "geyser-rs-temp-release"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.62"
bs58 = "0.5.1"
backoff = { version = "0.4.0", features = ["tokio"] }
chrono = "0.4.38"
dashmap = "5"
dotenv = "0.15"
env_logger = "0.11.6"
futures = "0.3.31"
hex = "0.4.3"
json5 = "0.4.1"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jsonc = "1"
solana-rpc-client = "3.0"
solana-stream-sdk = "1.2.0"
solana-sdk = "3.0"
solana-transaction-status = "3.0"
solana-pubkey = "3.0"
solana-signature = "3.0"
solana-hash = "3.0"
thiserror = "1"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.14.2" }
url = "2.5.4"
# Explicitly pin `home` to a toolchain-compatible release (rustc 1.86).
home = "=0.5.11"
