[package]
name = "shreds-rs-temp-release"
version = "0.2.5"
description = "Rust client for Solana shreds streaming"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/elsoul/solana-stream"
publish = false

[[bin]]
name = "shreds-rs-temp-release"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
solana-stream-sdk = "0.2.5"
solana-entry = "2.2.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
dotenvy = "0.15"
