[package]
name = "shreds-rs-starter"
version = "0.5.1"
description = "Rust client for Solana shreds streaming"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/elsoul/solana-stream"
publish = false

[[bin]]
name = "shreds-rs-temp-release"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.26"
dotenvy = "0.15"
env_logger = "0.11.3"
futures = "0.3.24"
log = "0.4"
solana-stream-sdk = "0.5.1"
solana-entry = "=2.2.1"
solana-rpc-client = "=2.2.1"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"]  }
