[package]
name = "shreds-udp-rs-starter"
version = "1.1.2"
description = "Rust UDP client for Solana Shredstream"
authors = ["ELSOUL LABO B.V. <labo@elsoul.nl>"]
homepage = "https://elsoul.nl/"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/elsoul/solana-stream"
publish = false

[[bin]]
name = "shreds-udp-rs-temp-release"
path = "src/main.rs"

[dependencies]
bincode = "1.3.3"
chrono = "0.4.38"
dotenvy = "0.15"
env_logger = "0.11.6"
log = "0.4"
solana-entry = "3.0"
solana-rpc-client = "3.0"
solana-ledger = { version = "3.0", features = ["agave-unstable-api"] }
solana-sdk = "3.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
solana-stream-sdk = "1.1.1"
# Explicitly pin `home` to a toolchain-compatible release (rustc 1.86).
home = "=0.5.11"
